layout simplification ... layout broken a bit... fixing tomorrow

--- a/sc/social/bookmarks/browser/sb_resources/social_bookmark.css
+++ b/sc/social/bookmarks/browser/sb_resources/social_bookmark.css
@@ -28,7 +28,7 @@
     position:relative;
 }
 .sc_social_bookmarks_overlay {
-    /* display:none; */
+    display:none;
     position: absolute;
     z-index: 1;
     padding:10px;
